@@ -41,7 +41,8 @@ extern void iec_cpu_write_conf2(BYTE data);
 extern void iec_cpu_write_conf3(BYTE data);
 extern BYTE iec_cpu_read(void);
 extern void iec_cpu_undump(BYTE data);
-extern void parallel_cable_cpu_write(BYTE data, int handshake);
+extern void parallel_cable_cpu_write(BYTE data);
+extern void parallel_cable_cpu_pulse(void);
 extern BYTE parallel_cable_cpu_read(void);
 extern void parallel_cable_cpu_undump(BYTE data);
 
